# sndfilter

./: meson.build
include/sndfilter/: reverb.h
src/: reverb.c
